:bug: Corrigido descricoes erradas em docs
