# docs/swagger.json
@@ -273,14 +273,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by joint/articulation name",
+                        "description": "Filter by joint name",
                         "name": "joint",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "Filter by movement name",
-                        "name": "moviment",
+                        "name": "movement",
                         "in": "query"
                     }
                 ],
@@ -301,7 +301,7 @@
                                                 "$ref": "#/definitions/core.MuscleMovementInfo"
                                             }
                                         },
-                                        "metaData": {
+                                        "metadata": {
                                             "$ref": "#/definitions/controllers.MetaData"
                                         }
                                     }
